# mcp-githubcli

./: README.md  pyproject.toml  test_main.py
src/github_cli/: __init__.py  main.py
